--- a/week_5/AppCoda_Chapter_7_8_9_10_11/RecipeApp/CustomTable/Base.lproj/Main.storyboard
+++ b/week_5/AppCoda_Chapter_7_8_9_10_11/RecipeApp/CustomTable/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="KnW-O3-bs7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2qJ-mu-q3m">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -52,7 +52,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X7Z-5T-brU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="837" y="366"/>
+            <point key="canvasLocation" x="1369" y="366"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="TCS-9b-qwE">
@@ -82,12 +82,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MwL-6R-L95" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1168" y="358"/>
+            <point key="canvasLocation" x="1700" y="358"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="k0A-Cd-ftn">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KnW-O3-bs7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="ESS-o7-EUI"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="6tX-Cr-buU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -99,6 +100,70 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LpS-PL-8mn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="994" y="366"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wj3-Oh-OGR">
+            <objects>
+                <navigationController id="Jss-Aq-GJ2" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="more" id="gEs-h0-0Rg"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZGe-hl-dxT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="euh-sG-abA" kind="relationship" relationship="rootViewController" id="VNB-fT-Ecc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sJZ-QG-pu5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="406" y="1047"/>
+        </scene>
+        <!--About View Controller-->
+        <scene sceneID="goY-7R-Y1u">
+            <objects>
+                <viewController id="euh-sG-abA" customClass="AboutViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Oy7-lp-hwN"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZSM-wn-Ekp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fnc-1d-MEu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="saz-Lu-E5T">
+                                <rect key="frame" x="0.0" y="-8" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="wlP-r2-XRd"/>
+                    <connections>
+                        <outlet property="webView" destination="saz-Lu-E5T" id="u3p-mA-06L"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sr2-mQ-PNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="830" y="1049"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="9T8-y1-SLe">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="2qJ-mu-q3m" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="uZQ-YP-sib">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="KnW-O3-bs7" kind="relationship" relationship="viewControllers" id="uPG-bm-cJz"/>
+                        <segue destination="Jss-Aq-GJ2" kind="relationship" relationship="viewControllers" id="1MW-jT-hd1"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UVK-hS-kvH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="462" y="366"/>
         </scene>
