--- a/week_5/Places_App_PS6/Places_App_PS6/Base.lproj/Main.storyboard
+++ b/week_5/Places_App_PS6/Places_App_PS6/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Gaa-xj-a8e">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="330-yi-8cR">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -45,7 +45,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kfd-dq-TnS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="602" y="305"/>
+            <point key="canvasLocation" x="1134" y="305"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="CLB-QJ-5se">
@@ -75,12 +75,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="26C-PV-hv1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="939" y="307"/>
+            <point key="canvasLocation" x="1471" y="307"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1Ih-8Y-wMv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gaa-xj-a8e" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="c3G-cV-mUF"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dgN-n8-EQ5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -92,6 +93,70 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kem-zy-zLs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="602" y="305"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EOc-ll-2qM">
+            <objects>
+                <navigationController id="OGH-Zy-J6V" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="more" id="Km5-dI-uNX"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NHv-az-Yql">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="wEp-D5-Cub" kind="relationship" relationship="rootViewController" id="z8y-OQ-4sN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O4y-tG-sSi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="224" y="1180"/>
+        </scene>
+        <!--About View Controller-->
+        <scene sceneID="aYI-lX-xcg">
+            <objects>
+                <viewController id="wEp-D5-Cub" customClass="AboutViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YqX-0h-21W"/>
+                        <viewControllerLayoutGuide type="bottom" id="oVi-Qz-OF0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RVN-NA-i0h">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lLu-Pi-Giw">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SfA-WC-U7f"/>
+                    <connections>
+                        <outlet property="webView" destination="lLu-Pi-Giw" id="rBw-3b-9Yq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bD8-56-DkP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="578" y="1208"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Ge6-bX-Ox5">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="330-yi-8cR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="qpj-L1-bWm">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Gaa-xj-a8e" kind="relationship" relationship="viewControllers" id="K5c-gv-Cf9"/>
+                        <segue destination="OGH-Zy-J6V" kind="relationship" relationship="viewControllers" id="fan-q0-xcx"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oHk-8V-IuJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="70" y="305"/>
         </scene>
