--- a/week_6/ToDoList_PS7/ToDoList_PS7/Base.lproj/Main.storyboard
+++ b/week_6/ToDoList_PS7/ToDoList_PS7/Base.lproj/Main.storyboard
@@ -153,7 +153,7 @@
         <!--Add To Do Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AddToDoItem" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
